MVP2-545 - fix profile link - integrate activities into games - integrate activities into user profile - fix hidden drawer overflow in chrome

--- a/src/components/MainMenu/styles.module.scss
+++ b/src/components/MainMenu/styles.module.scss
@@ -12,7 +12,7 @@ $largeMobileHeight: 700px;
   height: 100vh;
   top: 0;
   background-color: rgba(14, 9, 39, 0.86);
-  right: -100%;
+  right: -105%;
   transition: right 0.5s ease-in-out;
 
   .mainContent {
