--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,7 +31,7 @@
 
 
 .drawerHidden {
-  right: -101%;
+  right: -105%;
 }
 
 .backButton {
